add lock in functionality for voting

--- a/web/index.html
+++ b/web/index.html
@@ -58,6 +58,9 @@
             <div id="lead-voting" class="voting-section">
                 <h2>Voting for Leads</h2>
                 <div id="lead-judges-container" class="judges-container"></div>
+                <div class="vote-submission">
+                    <button id="determine-lead-winner" class="btn primary">Determine Lead Winner</button>
+                </div>
                 <div id="lead-results" class="results hidden">
                     <h3>Lead Winner: <span id="lead-winner"></span></h3>
                     <div class="votes">
@@ -70,6 +73,9 @@
             <div id="follow-voting" class="voting-section hidden">
                 <h2>Voting for Follows</h2>
                 <div id="follow-judges-container" class="judges-container"></div>
+                <div class="vote-submission">
+                    <button id="determine-follow-winner" class="btn primary">Determine Follow Winner</button>
+                </div>
                 <div id="follow-results" class="results hidden">
                     <h3>Follow Winner: <span id="follow-winner"></span></h3>
                     <div class="votes">
