--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>Hustle n' Tussle</h1>
-            <h2>Dance Competition Manager</h2>
+            <h2>Battle Manager</h2>
         </header>
 
         <div id="setup-screen" class="screen active">
@@ -37,14 +37,14 @@
                         <h2>Round <span id="round-number">1</span></h2>
                         <div class="matchups">
                             <div class="matchup">
-                                <h3>Matchup 1</h3>
+                                <h3>Couple 1</h3>
                                 <div class="pair">
                                     <span id="lead1-name" class="contestant lead"></span> (Lead) &
                                     <span id="follow1-name" class="contestant follow"></span> (Follow)
                                 </div>
                             </div>
                             <div class="matchup">
-                                <h3>Matchup 2</h3>
+                                <h3>Couple 2</h3>
                                 <div class="pair">
                                     <span id="lead2-name" class="contestant lead"></span> (Lead) &
                                     <span id="follow2-name" class="contestant follow"></span> (Follow)
