--- a/web/index.html
+++ b/web/index.html
@@ -62,11 +62,31 @@
                         <div class="scores-container">
                             <div class="lead-scores">
                                 <h4>Leads</h4>
-                                <ul id="current-lead-scores"></ul>
+                                <table class="score-table">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Pts</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="lead-score-body">
+                                        <!-- Lead scores will be inserted here -->
+                                    </tbody>
+                                </table>
                             </div>
                             <div class="follow-scores">
                                 <h4>Follows</h4>
-                                <ul id="current-follow-scores"></ul>
+                                <table class="score-table">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Pts</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="follow-score-body">
+                                        <!-- Follow scores will be inserted here -->
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -118,12 +138,32 @@
             <div class="leaderboard">
                 <div class="leads-board">
                     <h3>Top Leads</h3>
-                    <ul id="leads-leaderboard"></ul>
+                    <table class="results-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Pts</th>
+                            </tr>
+                        </thead>
+                        <tbody id="lead-results-body">
+                            <!-- Lead results will be inserted here -->
+                        </tbody>
+                    </table>
                 </div>
                 
                 <div class="follows-board">
                     <h3>Top Follows</h3>
-                    <ul id="follows-leaderboard"></ul>
+                    <table class="results-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Pts</th>
+                            </tr>
+                        </thead>
+                        <tbody id="follow-results-body">
+                            <!-- Follow results will be inserted here -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
             
