--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
                 <label for="judge-names">Guest Judge Names (comma-separated):</label>
                 <textarea id="judge-names" rows="2" placeholder="e.g., Alex, Jordan"></textarea>
             </div>
+            <p class="validation-message">Note: The number of leads must equal the number of follows.</p>
             <button id="start-competition" class="btn primary">Start Competition</button>
         </div>
 
