Enhance game and web logic to track round details and display history
- Updated game logic to store pairs, lead votes, follow votes, and winners for each round, improving the tracking of game state.
- Modified the web application to collect and display round metadata, including participants, voting results, and win messages in a new round history section.
- Added styles and JavaScript functionality to dynamically render round history in an accordion format, enhancing user experience and visibility of game progress.

--- a/web/index.html
+++ b/web/index.html
@@ -168,6 +168,13 @@
                 </div>
             </div>
             
+            <div class="round-history">
+                <h3>Round History</h3>
+                <div id="rounds-accordion" class="accordion">
+                    <!-- Round history will be dynamically inserted here -->
+                </div>
+            </div>
+            
             <button id="new-competition" class="btn primary">New Competition</button>
         </div>
     </div>
