Add song information handling to game rounds and update UI components
- Introduced a new attribute in the Round class to store song information for each round.
- Updated the judge_leads and judge_follows API endpoints to accept and store song information.
- Enhanced the front-end to include a song input field for users to submit Spotify links.
- Added CSS styles for the song input section to improve user interface.
- Implemented logic to display song information in the round history, including an embedded Spotify player for easy access.

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
             </div>
             <p class="validation-message">Note: The number of leads must equal the number of follows.</p>
             <div class="setup-actions">
-                <button id="start-competition" class="btn primary">Start Competition</button>
+            <button id="start-competition" class="btn primary">Start Competition</button>
                 <button id="setup-back-to-home" class="btn secondary">Back</button>
             </div>
         </div>
@@ -70,6 +70,10 @@
                 <div class="round-info-container">
                     <div class="round-info">
                         <h2>Round <span id="round-number">1</span></h2>
+                        <div class="song-input-container">
+                            <label for="song-input">Spotify Song Link:</label>
+                            <input type="url" id="song-input" placeholder="https://open.spotify.com/track/..." />
+                        </div>
                         <div class="matchups">
                             <div class="matchup">
                                 <h3>Couple 1</h3>
