--- a/web/index.html
+++ b/web/index.html
@@ -174,6 +174,20 @@
         <div id="results-screen" class="screen">
             <h2>Final Results</h2>
             
+            <div class="starting-order-section">
+                <h3>Starting Order</h3>
+                <div class="starting-order-container">
+                    <div class="leads-order">
+                        <h4>Leads</h4>
+                        <ul id="leads-initial-order"></ul>
+                    </div>
+                    <div class="follows-order">
+                        <h4>Follows</h4>
+                        <ul id="follows-initial-order"></ul>
+                    </div>
+                </div>
+            </div>
+            
             <div class="leaderboard">
                 <div class="leads-board">
                     <h3>Top Leads</h3>
