--- a/web/index.html
+++ b/web/index.html
@@ -254,6 +254,11 @@
         </div>
     </div>
 
+    <script>
+        // Set debug flag based on environment
+        window.ENABLE_DEBUG_TOOLS = {{ 'true' if config.ENABLE_DEBUG_TOOLS else 'false' }};
+    </script>
+    <script src="js/components/DebugTools.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html> 
