Refactor game logic to use session ID and enhance front-end integration
i honsetly don't know whats going on here it's late lol

- Replaced game ID with session ID in the Round and Game classes to better identify game sessions.
- Updated game initialization and round management to incorporate session ID, ensuring consistent tracking across rounds.
- Enhanced front-end JavaScript to display session ID and update it dynamically during gameplay.
- Modified API responses to include session ID instead of game ID, improving data clarity in JSON outputs.
- Adjusted Excel export functionality to reflect session ID, ensuring accurate identification in exported files.
- Improved application configuration by enabling debug mode and changing the server port for development.

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div id="session-id-display" class="session-id-display"></div>
     <div class="container">
         <header>
             <h1>Hustle n' Tussle</h1>
@@ -80,7 +81,7 @@
             </div>
             <p class="validation-message">Note: The number of leads must equal the number of follows.</p>
             <div class="setup-actions">
-            <button id="start-competition" class="btn primary">Start Competition</button>
+                <button id="start-competition" class="btn primary">Start Competition</button>
                 <button id="setup-back-to-home" class="btn secondary">Back</button>
             </div>
         </div>
